--- a/index.html
+++ b/index.html
@@ -5,31 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src=" https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
-    <input type="text" onkeydown="search()" />
-    <button onclick="MyApp()">앱 실행</button>
+    <div id="root"></div>
+    <script type="text/babel">
+      ReactDOM.render(e(LikeButton), document.querySelector("#root"));
+    </script>
   </body>
-  <script>
-    const MyApp = () => {
-      // Scheme을 통해 앱을 실행하며 세팅 화면으로 이동할거에요.
-      // 앱이 설치되어있지 않은 경우 아무 것도 실행되지 않아요.
-      const url = "twitter://signup";
-      location.href = url;
-
-      // 앱이 실행되면 아래 부분은 실행하지 않게 해야 하는 부분은 생략...
-
-      // 앱이 설치되어있지 않은 경우 앱을 다운로드 받을 것인지 사용자에게 물어보아요.
-      const ua = navigator.userAgent.toLowerCase();
-
-      if (window.confirm("스토어로 이동할까요?")) {
-        // Confirm 확인
-        location.href = ua.indexOf("android") > -1 ? "paly store url" : "app store url";
-      } else {
-        // Confirm 취소시 무언가를 할거라면.
-      }
-    };
-
-    // export default MyApp;
-  </script>
 </html>
